<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnSingle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="136dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_x_100"
        tools:srcCompat="@drawable/icon_x_100" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_o_100"
        tools:srcCompat="@drawable/icon_o_100" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/chooseMode"
        style="@style/textViewStyle"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBot"
        style="@style/btnSingleStyle"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/single_button"
        android:text="@string/againstBot"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFriend"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/withFriend"
        android:elevation="50dp"
        android:background="@drawable/friend_button"
        style="@style/btnFriendStyle"
        app:layout_constraintEnd_toEndOf="@+id/btnBot"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/btnBot"
        app:layout_constraintTop_toBottomOf="@+id/btnBot" />
</androidx.constraintlayout.widget.ConstraintLayout>