<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/b"
    style="st"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicTacToe">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/status_box"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_winner">

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="45dp"
            app:cardBackgroundColor="@color/debian_red"
            app:cardCornerRadius="15dp">

            <TextView
                android:id="@+id/txt_board_o"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/o"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/score_o"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/color_x"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/status_box"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_winner">

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="45dp"
            app:cardBackgroundColor="@color/debian_red"
            app:cardCornerRadius="15dp">

            <TextView
                android:id="@+id/txt_board_x"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/x"
                android:textColor="@color/nacho_cheese"
                android:textSize="35sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/score_x"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/color_x"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        android:animateLayoutChanges="true"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/down_on_sunflower_valley"
        app:cardCornerRadius="@android:dimen/notification_large_icon_width"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/vs"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/board"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn1"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/board_button"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:src="@drawable/icon_empty_50"
                android:text="Button" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/divider" />

            <ImageButton
                android:id="@+id/btn2"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/board_button"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:src="@drawable/icon_empty_50"
                android:text="Button" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/divider" />

            <ImageButton
                android:id="@+id/btn3"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/board_button"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:src="@drawable/icon_empty_50"
                android:text="Button" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn4"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/board_button"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:src="@drawable/icon_empty_50"
                android:text="Button" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/divider" />

            <ImageButton
                android:id="@+id/btn5"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/board_button"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:src="@drawable/icon_empty_50"
                android:text="Button" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/divider" />

            <ImageButton
                android:id="@+id/btn6"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/board_button"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:src="@drawable/icon_empty_50"
                android:text="Button" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn7"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/board_button"
                android:src="@drawable/icon_empty_50"
                android:text="Button" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/divider" />

            <ImageButton
                android:id="@+id/btn8"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/board_button"
                android:src="@drawable/icon_empty_50"
                android:text="Button" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/divider" />

            <ImageButton
                android:id="@+id/btn9"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/board_button"
                android:src="@drawable/icon_empty_50"
                android:text="Button" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/board"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageButton
            android:id="@+id/btn_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/unselected_button"
            android:foregroundGravity="center"
            android:src="@drawable/icon_bulleted_list_35"
            tools:srcCompat="@drawable/icon_bulleted_list_35" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/divider" />

        <ImageButton
            android:id="@+id/btn_restart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/unselected_button"
            android:foregroundGravity="center_vertical|center|center_horizontal"
            android:src="@drawable/icon_restart_35"
            tools:srcCompat="@drawable/icon_restart_35" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_winner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:textColor="@color/debian_red"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>